tools/crates/vendor/toml_edit/tests/fixtures/invalid/table/whitespace.stderr
TOML parse error at line 1, column 10
  |
1 | [invalid key]
  |          ^
invalid table header
expected `.`, `]`
